--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="asteroid"
-            type="com.udacity.asteroidradar.Asteroid" />
+            type="com.udacity.asteroidradar.domain.Asteroid" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +23,9 @@
             android:textColor="@color/default_text_color"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:contentDescription="@string/asteroid_code_name"
             android:fontFamily="@font/montserrat"
+            android:text="@{asteroid.codename}"
             app:layout_constraintEnd_toStartOf="@+id/asteroidStatusImageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,6 +41,8 @@
             android:textColor="@color/text_grey"
             android:textSize="16sp"
             android:fontFamily="@font/montserrat"
+            android:contentDescription="@string/asteroid_close_approaching_date"
+            android:text="@{asteroid.closeApproachDate}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/asteroidStatusImageView"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +53,7 @@
             android:id="@+id/asteroidStatusImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_status_normal"
+            app:statusIcon="@{asteroid.potentiallyHazardous}"
             android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/approachDateTextView"
             app:layout_constraintEnd_toEndOf="parent"
