--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="asteroid"
-            type="com.udacity.asteroidradar.Asteroid" />
+            type="com.udacity.asteroidradar.domain.Asteroid" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,6 +48,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/close_approach_data_title"
+                        android:contentDescription="@string/close_approach_data_title"
                         android:textColor="@color/default_text_color" />
 
                     <TextView
@@ -77,6 +78,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/absolute_magnitude_title"
+                            android:contentDescription="@string/absolute_magnitude_title"
                             android:textColor="@color/default_text_color" />
 
                         <TextView
@@ -94,6 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
+                        android:contentDescription="@string/help"
                         app:srcCompat="@drawable/ic_help_circle" />
 
                 </LinearLayout>
@@ -102,6 +105,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:contentDescription="@string/estimated_diameter_title"
                     android:text="@string/estimated_diameter_title"
                     android:textColor="@color/default_text_color" />
 
@@ -118,6 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:contentDescription="@string/relative_velocity_title"
                     android:text="@string/relative_velocity_title"
                     android:textColor="@color/default_text_color" />
 
@@ -134,6 +139,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:contentDescription="@string/distance_from_earth_title"
                     android:text="@string/distance_from_earth_title"
                     android:textColor="@color/default_text_color" />
 
